# pkudsa.tetris

./: .gitignore  Block.py  Board.py  CppAcceleration.lib  CppAcceleration.pyd  Data.py  MatchData.py  Pack.py  README.md  block.py  board.py  core.py  data.py  file1.py  file2.py  getpos.py  main.py  pack.py  test.py  trashbin.py  visual_by_pygame.py  visualization.py  参量.docx  比赛规则1.0.docx  用户文档.md  规则文档.docx
CppAcceleration/: CppAcceleration.sln
CppAcceleration/CppAcceleration/: CMakeCache.txt  CMakeLists.txt  CppAcceleration.vcxproj  CppAcceleration.vcxproj.filters  GetAllValidPositions.cpp  Makefile  cmake_install.cmake
TetrisCpp/: Game.h  TetrisCpp.cpp  TetrisCpp.vcxproj  TetrisCpp.vcxproj.filters  _Time.h  file1.h  file2.h
TetrisProgram/: .gitignore  Block.py  Board.py  CppAcceleration.lib  CppAcceleration.pyd  CppAcceleration310.lib  CppAcceleration310.pyd  CppAcceleration37.lib  CppAcceleration37.pyd  CppAcceleration38.lib  CppAcceleration38.pyd  CppAcceleration39.lib  CppAcceleration39.pyd  EliminationGame.py  MatchData.py  PVE_and_PVP_pygame.py  Pack.py  ReviewData.py  main.py  visual_by_pygame.py
TetrisProgram/players/: person.py  stupidAI1.py
TetrisProgram/review data/: stupidAI1 vs stupidAI2 review data.json
document/: 比赛规则.md  用户文档.md  背景故事.md
files/: AI v1.0.py  file1.py  file2.py
